# snake

./: BestScores.cpp  BestScores.h  CMakeLists.txt  Dockerfile  Food.cpp  Food.h  Game.cpp  Game.h  LICENSE.md  Map.cpp  Map.h  Player.cpp  Player.h  README.md  Snake.cpp  Snake.h  input.cpp  input.h  main.cpp  sonar-project.properties
.github/: CONTRIBUTING.md  SECURITY.md  pull_request_template.md
.github/workflows/: cmake.yml  sonar.yml
Google_tests/: CMakeLists.txt
Google_tests/lib/: CMakeLists.txt
Google_tests/lib/docs/: advanced.md  community_created_documentation.md  faq.md  gmock_cook_book.md
Google_tests/lib/googlemock/include/gmock/: gmock-actions.h  gmock-matchers.h  gmock-more-actions.h  gmock-nice-strict.h  gmock.h
Google_tests/lib/googlemock/include/gmock/internal/: gmock-internal-utils.h
Google_tests/lib/googlemock/include/gmock/internal/custom/: gmock-generated-actions.h  gmock-matchers.h
Google_tests/lib/googlemock/src/: gmock-spec-builders.cc  gmock.cc  gmock_main.cc
Google_tests/lib/googlemock/test/: gmock-function-mocker_test.cc  gmock-matchers-arithmetic_test.cc  gmock-matchers_test.h  gmock-pp_test.cc  gmock-spec-builders_test.cc  gmock_ex_test.cc  gmock_stress_test.cc  gmock_test.cc  gmock_test_utils.py
Google_tests/lib/googletest/: CMakeLists.txt
Google_tests/lib/googletest/test/: googletest-color-test.py  googletest-color-test_.cc  googletest-death-test-test.cc  googletest-death-test_ex_test.cc  googletest-env-var-test_.cc  googletest-failfast-unittest_.cc  googletest-filter-unittest.py  googletest-global-environment-unittest.py  googletest-json-outfiles-test.py  googletest-json-output-unittest.py  googletest-list-tests-unittest.py  googletest-list-tests-unittest_.cc  googletest-listener-test.cc  googletest-message-test.cc  googletest-param-test-invalid-name2-test_.cc  googletest-param-test-test.cc  googletest-param-test-test.h  googletest-port-test.cc  googletest-shuffle-test.py  googletest-shuffle-test_.cc  googletest-test-part-test.cc  googletest-throw-on-failure-test.py  googletest-uninitialized-test.py
src/: BestScores.cpp  BestScores.h  Direction.h  Food.cpp  Food.h  Game.cpp  Game.h  Graphics.cpp  Graphics.h  Input.cpp  Input.h  Logger.cpp  Logger.h  Player.cpp  Player.h  RegularFood.cpp  RegularFood.h  Snake.cpp  Snake.h  SuperFood.cpp  SuperFood.h  Utils.cpp  Utils.h  input.cpp  input.h  main.cpp
tests/: BestScoresTests.cpp  BestScoresTests.h  CMakeLists.txt  FoodTests.cpp  FoodTests.h  GameTests.cpp  GameTests.h  RegularFoodTests.cpp  SnakeTests.cpp  SnakeTests.h
